# mdse

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  main.qml
